# company-scope

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_financial_domain.py  0003_restatement_constraint.py  0004_refresh_runs_nullable_company.py  0005_parser_schema.py  0006_derived_metrics.py  0007_snapshot_build_runs.py  0008_user_password_hash.py
apps/api/app/: auth.py  config.py  main.py  rate_limit.py
apps/api/app/adapters/: __init__.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  audit.py  charge.py  company.py  filing.py  financial_fact.py  financial_period.py  insolvency.py  methodology.py  officer.py  ops.py  psc.py  signal.py  user.py
apps/api/app/queries/: companies.py  users.py
apps/api/app/routers/: auth.py  companies.py  watchlists.py
apps/api/app/schemas/: common.py  company.py  filing.py  financial.py  user.py
apps/api/tests/: conftest.py  test_migrations.py  test_models.py  test_routes_auth.py  test_routes_companies.py  test_routes_watchlists.py
apps/api/tests/adapters/: test_ch_client.py
apps/worker/: pyproject.toml
apps/worker/app/: config.py  db.py  main.py  repositories.py
apps/worker/app/adapters/: companies_house.py  object_store.py
apps/worker/app/analytics/: __init__.py  ai_client.py  ai_models.py  context_builder.py  fallback.py  metrics.py  models.py  period_selector.py  signals.py  snapshot_builder.py
apps/worker/app/parsers/: __init__.py  canonical_mapper.py  classifier.py  confidence.py  html_extractor.py  ixbrl_extractor.py  models.py
apps/worker/app/tasks/: analysis.py  document_fetch.py  document_parse.py  (+3 more)
apps/worker/tests/: test_ai_client.py  test_canonical_mapper.py  test_classifier.py  test_confidence.py  test_document_fetch.py  test_document_parse.py  test_extraction.py  test_fallback.py  test_html_extractor.py  test_ingestion.py  test_ixbrl_extractor.py  test_metrics.py  test_repositories.py  test_signals.py  test_snapshot_builder.py
(+67 files in other folders)
