[project]
name = "companyscope"
version = "0.1.0"
description = "Explainable UK company intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["apps/api", "apps/worker", "packages/ch-client"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
