[project]
name = "companyscope-api"
version = "0.1.0"
description = "CompanyScope FastAPI backend service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.27",
    "companyscope-ch-client",
]

[tool.uv.sources]
companyscope-ch-client = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "httpx>=0.27",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Set TEST_DATABASE_URL to run migration and model tests against a real DB.
# Tests that require a DB are skipped automatically when the var is absent.
