[project]
name = "companyscope-worker"
version = "0.1.0"
description = "CompanyScope Celery background worker service"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.27",
    "aioboto3>=13.0",
    "lxml>=5.0",
    "companyscope-ch-client",
]

[tool.uv.sources]
companyscope-ch-client = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
